# abc-header-parser

./: .gitignore  ChangeLog.md  LICENSE  README.md  abc-header-parser.cabal  package.yaml  stack.yaml
src/Data/: Abc.hs  Genre.hs  GenreParser.hs
src/Data/Abc/: Parser.hs  Serializer.hs  Validator.hs
tests/: Tests.hs
